# WKE

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  modules.txt  modules_cuda.txt  modules_pthreads.txt
3wke/: 3wke  3wke.cpp  3wke_FVS.cpp  CMakeLists.txt  FVS  Makefile  RD  RD.cpp  cmake_install.cmake  setup.cpp  state.h  time0.txt  timeEnd.txt
3wke/outputs/: g.ps  g0.ps  g0_new.ps  g_new.ps  plot.script  plotIC.script  t0.txt  t1.txt  t10.txt  t2.txt  t3.txt  t300.txt  t32.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
